--- a/main.css
+++ b/main.css
@@ -1,50 +1,57 @@
-.tabs-container { 
+.tab-switch.tabs-container {
 	position:fixed;
 	top:30px;
 	z-index:99999999;
 	background-color:rgb(227,227,227);
-	overflow:hidden;
-	width:500px;
+	overflow-x: hidden;
+    overflow-y: auto;
+	width: 506px;
 	box-shadow:#000 2px 2px 10px 0px;
 	font-family:Helvetica, Arial, sans-serif;
 	color:rgb(68,68,68);
 }
 
-.tabs-container .tab-entry {
+.tab-switch.tabs-container .tab-entry {
 	margin:3px;
 	line-height:14px;
 	cursor:pointer;
 	border-bottom:solid 1px #fff;
 }
-.tabs-container .tab-entry.selected {
+.tab-switch.tabs-container .tab-entry.selected {
 	background-color:#FF5A14;
 	color:#fff;
 }
-.tabs-container .tab-entry .tab-icon {
+.tab-switch.tabs-container .tab-entry .tab-icon {
 	display:inline-block;
 	float:left;
 	margin-right:6px;
-	width:28px; height:28px;
-	padding:4px;
+	width:28px; height:40px;
+    line-height: 40px;
+	padding: 0 8px;
 }
-.tabs-container .tab-entry .tab-icon img {
+.tab-switch.tabs-container .tab-entry .tab-icon img {
 	width:28px; height:28px;
 }
 
-.tabs-container .tab-entry .name {
-	font-size:13px;
-	font-weight:bold;
-	display:inline-block;
-	width:450px;
-	margin-top:4px;
-	height:14px;
-	overflow:hidden;
+.tab-switch.tabs-container .tab-entry .name {
+	font-size: 16px;
+    height: 18px;
+    line-height: 20px;
+	font-weight: bold;
+	display: inline-block;
+	width: 450px;
+	margin-top: 4px;
+	overflow: hidden;
+    text-overflow: ellipsis;
 }
-.tabs-container .tab-entry .url {
-	font-size:10px;
-	display:inline-block;
-	width:450px;
-	margin-bottom:4px;
-	height:14px;
-	overflow:hidden;
+.tab-switch.tabs-container .tab-entry .url {
+	font-size: 12px;
+    color: #888;
+	display: inline-block;
+	width: 450px;
+    text-overflow: ellipsis;
+	margin-bottom: 8px;
+	height: 14px;
+    line-height: 18px;
+	overflow: hidden;
 }
