--- a/main.css
+++ b/main.css
@@ -1,14 +1,55 @@
+.tab-switch {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
+.tab-switch.backdrop {
+    position: fixed;
+    top:0; bottom:0; left:0; right:0;
+    height:100%; width:100%;
+    background-color: #000;
+    opacity: 0.4;
+    z-index: 999999;
+}
+
+.tab-switch.main-wrapper {
+    position: fixed;
+	top: 30px;
+	z-index: 99999999;
+	/*background-color: rgb(227,227,227);*/
+    background-color: #fff;
+    width: 506px;
+	box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
+	font-family: Helvetica, Arial, sans-serif;
+	color: rgb(68,68,68);
+    border-radius: 4px;
+}
 .tab-switch.tabs-container {
-	position:fixed;
-	top:30px;
-	z-index:99999999;
-	background-color:rgb(227,227,227);
 	overflow-x: hidden;
     overflow-y: auto;
-	width: 506px;
-	box-shadow:#000 2px 2px 10px 0px;
-	font-family:Helvetica, Arial, sans-serif;
-	color:rgb(68,68,68);
+}
+.tab-switch .user-filter {
+    display: block;
+    margin:2px
+    height: 20px;
+    padding: 4px;
+}
+.tab-switch .user-filter input {
+    width: 478px;
+    margin: 0 auto;
+    padding: 0;
+    height: 32px;
+    padding: 0 8px;
+    font-weight: bold;
+    font-size: 16px;
+    border: solid 2px #afafaf;
+    outline: none;
+    box-shadow: none;
+}
+.tab-switch .user-filter input:focus {
+    border-color: inherit;
+    outline: none;
+    box-shadow: none;
 }
 
 .tab-switch.tabs-container .tab-entry {
@@ -16,10 +57,14 @@
 	line-height:14px;
 	cursor:pointer;
 	border-bottom:solid 1px #fff;
+    border-radius: 4px;
+    height: 52px;
+    padding-top: 4px;
 }
 .tab-switch.tabs-container .tab-entry.selected {
-	background-color:#FF5A14;
-	color:#fff;
+	/*background-color:#FF5A14;*/
+    background-color: rgba(158,158,158,0.2);
+	/*color:#fff;*/
 }
 .tab-switch.tabs-container .tab-entry .tab-icon {
 	display:inline-block;
@@ -27,7 +72,7 @@
 	margin-right:6px;
 	width:28px; height:40px;
     line-height: 40px;
-	padding: 0 8px;
+	padding: 2px 8px 0 8px;
 }
 .tab-switch.tabs-container .tab-entry .tab-icon img {
 	width:28px; height:28px;
@@ -35,7 +80,7 @@
 
 .tab-switch.tabs-container .tab-entry .name {
 	font-size: 16px;
-    height: 18px;
+    height: 20px;
     line-height: 20px;
 	font-weight: bold;
 	display: inline-block;
@@ -51,7 +96,7 @@
 	width: 450px;
     text-overflow: ellipsis;
 	margin-bottom: 8px;
-	height: 14px;
-    line-height: 18px;
+	height: 16px;
+    line-height: 12px;
 	overflow: hidden;
 }
